Informe: completé la planificación + pequeña reestructuración

--- a/informe/entrega final/informe.tex
+++ b/informe/entrega final/informe.tex
@@ -121,12 +121,8 @@
 \newpage
 
 \setlist[enumerate]{leftmargin=2.5cm}
-\section{Planificación}
+\section{Planificación y seguimiento}
 \input{planificacion.tex}
-\newpage
-
-\section{Seguimiento del proyecto}
-\input{seguimiento.tex}
 \newpage
 
 \section{Diseño Orientado a Objetos}
