--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -35,3 +35,25 @@ Analicemos y justifiquemos el diagrama parte por parte.
 \item[Usuario] Explicar acá.
 \end{itemize}
 }
+
+
+
+\subsection{Diagramas de Objetos y Secuencia}
+
+\subsubsection{Calificar bares}
+
+\subsubsection{Filtro de bares filtrando por una única característica}
+
+\subsubsection{Filtro de bares filtrando por tres característica}
+
+\subsubsection{Visualización de resultados}
+
+
+\subsection{Más en detalle\ldots}
+
+\subsubsection{Incorporación de bares}
+
+\subsubsection{Incorporación de nuevas características de bares}
+
+\subsubsection{El diseño y comportamiento de los distintos filtros de búsqueda de bares}
+
