--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -30,11 +30,19 @@ Analicemos y justifiquemos el diagrama parte por parte.
 \end{itemize}
 
 
-{\color{red}
 \begin{itemize}
-\item[Usuario] Explicar acá.
+\item[ConjuntoDeUsuarios] Como su nombre lo indica, representa el conjunto de usuarios del sistema. Adicionalmente, esta clase es la encargada de validar las credenciales provistas para loguearlos y autenticarlos.
+    \par Implementativamente, se accede mediante un \textit{Singleton}.
+\item[Usuario] Ésta es la clase que representa a un usuario. 
+    Los usuarios pueden tener distintos privilegios\footnote{Actualmente, un usuario puede ser No-Registrado, Registrado o Mod.}, y éstos pueden cambiar en \textit{runtime}; para contemplar esto, empleamos el patrón de diseño \textit{State}\footnote{Empleando la terminología de ``\textit{Design Patterns}'' de Gamma et al, Usuario es el \textit{Context} del patrón.}.
+        \par Cabe destacar que la clase usuario presenta ciertos mensajes\footnote{Por ejemplo, \tt{is\_authenticated()}.} que deberían ser responsabilidad de ConjuntoDeUsuarios; éstos deben ser implementados por la clase Usuario para poder emplear el módulo \textit{Flask-Login}.
+        Nuestros métodos forwardean dichos mensajes a ConjuntoDeUsuarios, ya que son su responsabilidad.
+    \item[Privilegio] Como mencionamos, la clase Usuario emplea el patrón \textit{State}; Privilegio es la clase abstracta de la cual heredan los privilegios concretos. En términos de ``\textit{Design Patterns}, Privilegio es el \textit{State} del patrón.
+    \item[Mod, etc...] Éstos son los privilegios concretos que puede adquirir un Usuario; son los \textit{Concrete States} del patrón. Como tales, los métodos de Usuario simplemente forwardean los mensajes a estas clases, que se ocupan de realizar la implementación propriamente dicha.
+    \item[Renderer] El rendering de html al cargar una página\footnote{Podría haber más eventos con requerimientos similares; actualmente el rendering de html es el único que se nos presentó, por lo que nos concentraremos en éste. Sin embargo, lo siguiente es aplicable a cualquiera de éstos.} puede depender de los privilegios del usuario actual, pero no es responsabilidad del Usuario.
+        \par Para resolver esto, empleamos un patrón \textit{Visitor}: Usuario presenta un mensaje \textit{accept}, cuyo método forwardea el mensaje a Privilegio, y cada privilegio concreto llama al mensaje correspondiente del Renderer\footnote{Que corresponde al \textit{visitor} del patrón, en términos de ``\textit{Design Patterns}''.}.
+    \par Cabe destacar que empleamos un único \textit{visitor} concreto, en vez de una jerarquía de \textit{visitors} concretos que heredan de uno abstracto, pues requerimos uno solo. Sin embargo, dado el \textit{duck typing} de \textit{Python}, es trivial refactorear nuestra implementación a una con dicha jerarquía, en caso de requerirlo en el futuro.
 \end{itemize}
-}
 
 
 
