--- a/informe/entrega-final/informe.tex
+++ b/informe/entrega-final/informe.tex
@@ -1,4 +1,4 @@
-\documentclass[hidelinks,a4paper,11pt, nofootinbib]{article}
+\documentclass[hidelinks,a4paper,10pt, nofootinbib]{article}
 \usepackage{geometry}
 \usepackage[spanish, es-tabla]{babel} %es-tabla es para que ponga Tabla en vez de Cuadro en el caption
 \usepackage[utf8]{inputenc}
@@ -24,6 +24,7 @@
 \usepackage{amsmath}
 \usepackage{wrapfig}
 \usepackage{caption}
+\usepackage{mathpazo}
 
 \setlength{\parindent}{4em}
 \setlength{\parskip}{1em}
