--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -56,6 +56,19 @@ Analicemos y justifiquemos el diagrama parte por parte.
 
 \subsubsection{Visualización de resultados}
 
+\subsubsection{Autenticar Usuario}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{diagramas/ObjetosLogIn.pdf}
+    \caption{Diagrama de objetos de una autenticación (exitosa).}\label{ObjLogIn}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{diagramas/SecuenciaLogIn.pdf}
+    \caption{Diagrama de secuencia de una autenticación (exitosa).}\label{SecLogIn}
+\end{figure}
 
 \subsection{Más en detalle\ldots}
 
