--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -106,6 +106,18 @@ En cuanto al diagrama de objetos es igual que antes. El buscador tiene adentro a
 
 \subsubsection{Visualización de resultados}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/secuencia_4.pdf}
+  \caption{\normalfont Diagrama de secuencia.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{diagramas/objetos_4.pdf}
+  \caption{\normalfont Diagrama de objetos.}
+\end{figure}
+
 \subsubsection{Autenticar Usuario}
 
 \par A continuación presentamos los diagramas de objetos y secuencia de una llamada (exitosa) a 
