Informe terminado - \epsilon (falta 3.3.1 gabriel)

--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -91,11 +91,10 @@ Enchufes, etcétera), un comentario y el usuario que realizo los mismos. Como de
   \caption{\normalfont Diagrama de clases del subsistema de visualización de resultados.}
 \end{figure}
 
-{\color{red}
 \begin{itemize}
-  \item[\footnotesize{VisualizadorDeResultados}] asd asd
+  \item[\footnotesize{VisualizadorDeResultados}] Esta clase tiene el propósito de generar la visualización de resultados de bares. El mensaje de creación de instancia se ocupa de recibir un formulario de búsqueda directo de la request http POST, y generar los filtros adecuados.
+    Además, tiene un m\'etodo llamado Visualizar que simplemente se ocupa de buscar y generar el HTML de la página de resultados. En la siguiente sección veremos con diagramas más detallados como interactúa todo.
 \end{itemize}
-}
 
 
 \subsection{Diagramas de Objetos y Secuencia}
